fix: Unify the regular and enhancedBootstrap UX  * Consolidate controls.sortable configuration into a single definition  * Prevent control jumping by control + helper buttons invisible instead of removing them  * Make stage a flex container and ensure the last drop zone is a flex-grow so that it spans remaining space in the stage  * Use boostrap hover class in regular formBuilder to give additional user feedback on drop zones for sorting  * Various equality checks from == to ===

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -1,4 +1,6 @@
 .stage-wrap {
+  display: flex;
+  flex-direction: column;
   position: relative;
   padding: 0;
   margin: 0;
@@ -792,15 +794,24 @@
   white-space: nowrap;
 }
 
-.colHoverTempStyle {
-  padding-left: 7px !important;
-  padding-right: 7px !important;
+.colWithInsertButtons {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
   flex: 95 1 0% !important;
 }
 
 .rowWrapper {
   margin-left: 0 !important;
   margin-right: 0 !important;
+}
+
+.rowWrapper:last-child {
+  flex-grow: 1;
+}
+
+.rowWrapper:not(.tempRowWrapper) {
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .btnAddControl {
@@ -820,6 +831,24 @@
 .hoverDropStyleInverse {
   background-color: #0d99f2;
   border: 1px dashed #e5f5f8;
+  min-height: 20px;
+}
+
+.hoverDropStyleInverse .colWrapper {
+  max-width: calc(100% - 40px);
+}
+
+.stage-wrap > .hoverDropStyleInverse {
+  width: 100%;
+}
+
+.rowWrapper > .hoverDropStyleInverse {
+  min-width: 40px;
+  flex-grow: 1;
+}
+
+.hoverDropStyleInverse:last-child {
+  flex-grow: 1;
 }
 
 .invisibleRowPlaceholder {
